VR: keep track of dialog buffer size

When entering presentation mode from 2D browsing, the content's buffer
size is not set, and thus VrShellGl uses the wrong buffer size for the
dialogs.

Bug: 856727
Change-Id: Idf740285739e026a818b44c85fd05b34edfbd17f
Reviewed-on: https://chromium-review.googlesource.com/1124864
Reviewed-by: Michael Thiessen <mthiesse@chromium.org>
Commit-Queue: Aldo Culquicondor <acondor@chromium.org>
Cr-Commit-Position: refs/heads/master@{#572271}
Former-commit-id: 118f0d2fa00ae060a91593693ff5c59765a40a57